Save and restore button clipping constraints.

This fixes #8700